Created additional features like payment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
@@ -34,7 +34,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family: 'Montserrat', sans-serif;
+  --font-family: 'Raleway', sans-serif;
 
 }
 
@@ -45,10 +45,11 @@
 }
 
 html {
-  font-family: sans-serif;
+    font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    scroll-behavior: smooth;
 }
 
 article,
@@ -66,7 +67,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -10899,18 +10900,47 @@ a.text-dark:focus {
   }
 }
 
-.background-photo{
-    background-image: url('https://source.unsplash.com/4TBSG2Oqu0Q');
+    .background-photo{
+        background-image: url('https://source.unsplash.com/4TBSG2Oqu0Q');
 
-    background-repeat:no-repeat;
-    background-size:cover;
-    height: 100vh;
-    width: 100%;
-}
+        background-repeat:no-repeat;
+        background-size:cover;
+        height: 100vh;
+        width: 100%;
+    }
 
 .blur{
     /*background: rgba(255, 255, 255, 0.2);*/
     backdrop-filter: blur(8px);
     height: 100vh;
 
+}
+
+
+@media(min-width: 768px){
+    .newsletter {
+        width: 50%;
+    }
+}
+
+.carousel-indicators{
+    left: 0;
+    top: auto;
+    bottom: -70px;
+}
+
+.carousel-indicators li{
+    background: #000;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+}
+
+.carousel-indicators .active{
+    background: #fff;
+
+}
+
+.carousel-caption{
+    color: #1a202c;
 }
