Updated products and bands page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10901,7 +10901,7 @@ a.text-dark:focus {
 }
 
     .background-photo{
-        background-image: url('https://source.unsplash.com/4TBSG2Oqu0Q');
+        background-image: url('https://source.unsplash.com/Tl8mDaue_II');
 
         background-repeat:no-repeat;
         background-size:cover;
